# paykit-rs

./: .gitignore  AUDIT_DELIVERABLES_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_ISSUES.md  BITKIT_INTEGRATION_READINESS_REVIEW.md  BUILD.md  CHANGELOG.md  CLI_SUBSCRIPTIONS_COMPLETE.md  COMPATIBILITY.md  COMPREHENSIVE_REVIEW.md  CURRENT_STATUS_REPORT.md  Cargo.toml  DEMO_APPS_COMPREHENSIVE_PLAN.md  DEMO_APPS_COMPREHENSIVE_REVIEW_AND_PLAN.md  DEMO_APPS_FEATURE_PARITY_PLAN.md  DEMO_APP_FIX_PLAN.md  DEMO_FEATURE_PARITY_PLAN.md  DEMO_PARITY_PLAN.md  DEPLOYMENT.md  FINAL_STATUS_REPORT.md  FINAL_V1_REPORT.md  HANDOFF_STATUS.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_AUDIT_REPORT.md  LOOSE_ENDS_CHECK.md  LOOSE_ENDS_SUMMARY.md  MIGRATION.md  MOBILE_INTEGRATION_REVIEW.md  MOBILE_INTEGRATION_SUMMARY.md  PAYKIT_DEMO_APPS_REVIEW.md  PAYKIT_DEMO_APPS_REVIEW_SUMMARY.md  PAYKIT_ROADMAP.md  PAYKIT_SECURITY_AUDIT_REPORT.md  PHASE1_CLI_COMPLETE_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PROGRESS.md  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  README.md  (+14 more)
paykit-demo-cli/: BUILD.md  CLI_AUDIT_STATUS.md  COMPLETION.md  Cargo.toml  FINAL_AUDIT_REPORT.md  FINAL_PRODUCTION_VERIFICATION.md  IMPLEMENTATION_PROGRESS.md  PHASE1_AUDIT_STATUS.md  PHASE2_NOISE_STATUS.md  PHASE3_PAYMENT_STATUS.md  PHASE4_SUBSCRIPTIONS_STATUS.md  PHASE5_TESTING_STATUS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  TESTING.md  TROUBLESHOOTING.md  VERIFICATION_SUMMARY.md  test_results.txt
paykit-demo-cli/demos/: 01-basic-payment.sh  02-subscription.sh  03-cold-key-payment.sh  03-privacy-features.sh  04-anonymous-payment.sh  04-backup-restore.sh  05-full-workflow.sh  README.md
paykit-demo-cli/src/: lib.rs  main.rs
paykit-demo-cli/tests/: cold_key_integration.rs  e2e_payment_flow.rs  feature_tests.rs  noise_integration.rs  pattern_e2e.rs  pay_integration.rs  property_tests.rs  pubky_compliance.rs  publish_integration.rs  smoke_test.rs  workflow_integration.rs
paykit-demo-core/: BUILD.md  Cargo.toml  README.md
paykit-demo-core/examples/: README.md  cold_key_workflow.rs  pattern_comparison.rs
paykit-demo-core/src/: attestation.rs  directory.rs  identity.rs  lib.rs  models.rs  noise_client.rs  noise_server.rs  payment.rs  pkarr_discovery.rs  session.rs  storage.rs  subscription.rs
paykit-demo-core/tests/: pattern_server.rs  pkarr_integration.rs  property_tests.rs  test_autopay_e2e.rs  test_directory_operations.rs  test_subscription_flow.rs
paykit-demo-web/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTACTS_FEATURE.md  Cargo.toml  DASHBOARD.md  DEPLOYMENT.md  PAYMENTS.md  PAYMENT_METHODS.md  QUICK_FIX_HOMEBREW_RUST.md  README.md  RECEIPTS.md  START_HERE.md  SUBSCRIPTION_IMPLEMENTATION.md  TESTING.md  netlify.toml  package.json  test-phase1.sh  vercel.json
paykit-demo-web/src/: contacts.rs  dashboard.rs  directory.rs  identity.rs  lib.rs  payment.rs  payment_methods.rs  private_endpoints.rs  storage.rs  storage_migration.rs  subscriptions.rs  types.rs  utils.rs  wasm_transport.rs  websocket_transport.rs
paykit-demo-web/tests/: contact_lifecycle.rs  cross_feature_integration.rs  dashboard.rs  edge_cases.rs  payment_flow.rs  payment_method_management.rs  receipt_management.rs  storage_persistence.rs  subscription_lifecycle.rs
paykit-demo-web/www/: app.js  index.html  styles.css
paykit-interactive/: BUILD.md  Cargo.toml  README.md
paykit-interactive/examples/: complete_payment_flow.rs  rate_limited_server.rs
paykit-interactive/src/: connection_limit.rs  lib.rs  manager.rs  metrics.rs  rate_limit.rs  storage.rs  transport.rs
paykit-interactive/tests/: e2e_mobile_flow.rs  e2e_noise_payments.rs  e2e_payment_flows.rs  e2e_server_mode.rs  integration_noise.rs  manager_tests.rs  mock_implementations.rs  serialization.rs
paykit-lib/: BUILD.md  Cargo.toml  README 2.md  README.md
paykit-lib/benches/: crypto_benchmarks.rs  noise_benchmarks.rs
paykit-lib/examples/: custom_method.rs  ecommerce.rs  ecommerce_README.md  p2p_payment.rs  p2p_payment_README.md  subscription_service.rs  subscription_service_README.md
paykit-lib/src/: errors.rs  lib.rs  prelude.rs  uri.rs
paykit-lib/tests/: executor_integration.rs  pubky_sdk_compliance.rs
paykit-mobile/: API_REFERENCE.md  BITKIT_AUTOPAY_INTEGRATION.md  BITKIT_COMPLETE_INTEGRATION.md  BITKIT_INTEGRATION_GUIDE.md  BITKIT_UI_INTEGRATION 2.md  BUILD.md  BUILD_STATUS_FOR_TESTING.md  BUILD_VERIFICATION.md  CHANGELOG.md  Cargo.toml  DEMO_APPS_PRODUCTION_READINESS.md  DIRECTORY_INTEGRATION.md  E2E_TESTING_GUIDE.md  E2E_TEST_RESULTS.md  FFI_API_REFERENCE.md  KEY_ARCHITECTURE.md  LOOSE_ENDS.md  LOOSE_ENDS_RESOLUTION.md  NOISE_INTEGRATION_GUIDE.md  NOISE_PAYMENTS_COMPLETE.md  NOISE_PAYMENTS_IMPLEMENTATION.md  PAYMENT_FLOW_GUIDE.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_4_SUMMARY 2.md  PRODUCTION_CHECKLIST.md  PUBKY_RING_INTEGRATION.md  README.md  SERVER_MODE_GUIDE.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  build-android.sh  build-ios.sh  generate-bindings.sh  uniffi.toml  verify-build.sh
paykit-mobile/android-demo/: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
paykit-mobile/ios-demo/: BUILD_AND_TEST.md  IMPLEMENTATION_REVIEW.md  INTEGRATION_GUIDE.md  IOS_BUILD_SETUP_COMPLETE.md  IOS_BUILD_STATUS.md  QUICK_START.md  README.md  SETUP_STATUS.md  add_test_target.py  fix_xcode_config.sh  install-uniffi-bindgen.sh
paykit-mobile/kotlin/: AutoPayStorage.kt  BitkitExecutorExample.kt  EncryptedPreferencesStorage.kt  KeyManager.kt  PaymentRequestService.kt  PrivateEndpointStorage.kt
paykit-mobile/src/: async_bridge.rs  executor_ffi.rs  interactive_ffi.rs  keys.rs  lib.rs  noise_ffi.rs  scanner.rs  spending_ffi.rs  transport_ffi.rs
paykit-mobile/swift/: BitkitExecutorExample.swift  KeyManager.swift  PaymentRequestService.swift
paykit-mobile/tests/: backward_compat.rs  cross_platform_e2e.rs  directory_service_real_transport.rs  e2e_helpers.rs  executor_integration.rs  noise_ffi_integration.rs  (+3 more)
paykit-subscriptions/: BUILD.md  Cargo.toml  README.md
(+340 files in other folders)
