[package]
name = "paykit-demo-core"
version = "0.1.0"
edition = "2021"
description = "Shared core functionality for Paykit demos"

[dependencies]
paykit-lib = { path = "../paykit-lib", features = ["pubky"] }
paykit-interactive = { path = "../paykit-interactive" }
paykit-subscriptions = { path = "../paykit-subscriptions" }
pubky = "0.6.0-rc.6"
pubky-noise = { path = "../../pubky-noise-main", features = ["pubky-sdk"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
rand = "0.8"
anyhow = "1"
hex = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full", "net"] }
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
pubky-testnet = "0.6.0-rc.6"
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
uuid = { version = "1.0", features = ["v4"] }

