[package]
name = "paykit-interactive"
version = "0.1.0"
edition = "2021"
description = "Interactive payment protocols and receipts for Paykit over Pubky Noise"

[dependencies]
paykit-lib = { path = "../paykit-lib", features = ["pubky"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["time"], optional = true }

pubky-noise = { path = "../../pubky-noise-main", features = ["pubky-sdk"] }

[features]
default = ["timeout", "tcp-transport"]
timeout = ["tokio"]
tcp-transport = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
pubky = "0.6.0-rc.6"
ed25519-dalek = "2.1"
sha2 = "0.10"
