[package]
name = "paykit-lib"
version = "0.0.1"
authors = ["denys@synonym.to"]
description = "Paykit library implementation"
license = "MIT"
edition = "2021"

[features]
default = ["pubky"]
pubky = ["dep:pubky"]
tracing = ["dep:tracing"]
file-storage = ["dep:md5"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4"
md5 = { version = "0.7", optional = true }
pubky = { version = "0.6.0-rc.6", optional = true }
thiserror = "2.0"
tokio = "1.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
pubky-testnet = { version = "0.6.0-rc.6" }

