[package]
name = "paykit-lib"
version = "1.0.0"
authors = ["denys@synonym.to"]
description = "Paykit library implementation"
license = "MIT"
edition = "2021"

[features]
default = ["pubky"]
pubky = ["dep:pubky"]
tracing = ["dep:tracing"]
file-storage = ["dep:md5", "dep:aes-gcm", "dep:hkdf", "dep:sha2", "dep:rand", "dep:zeroize", "dep:argon2"]
# Enable test utilities for integration testing
test-utils = []
# Integration tests that require network access (opt-in only)
integration-tests = ["pubky"]
# Pubky SDK compliance tests (opt-in, requires network and pubky testnet)
pubky_compliance_tests = ["pubky"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4"
md5 = { version = "0.7", optional = true }
pubky = { version = "0.6.0-rc.6", optional = true }
thiserror = "2.0"
tokio = "1.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
# Encryption dependencies for file-storage feature
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
# Secure memory zeroization
zeroize = { version = "1", features = ["derive"], optional = true }
# Argon2 password-based KDF (memory-hard, resistant to brute-force attacks)
argon2 = { version = "0.5", optional = true }

# Platform-specific secure storage dependencies
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Credentials"] }

[dev-dependencies]
pubky-testnet = { version = "0.6.0-rc.6" }
paykit-subscriptions = { path = "../paykit-subscriptions" }
paykit-interactive = { path = "../paykit-interactive" }
tempfile = "3.10"
tokio = { version = "1.48.0", features = ["rt", "macros", "time"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
blake2 = "0.10"
pubky-noise = { path = "../../pubky-noise-main" }

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "noise_benchmarks"
harness = false

