[package]
name = "paykit-mobile"
version = "0.1.0"
edition = "2021"
description = "Mobile FFI bindings for Paykit (iOS/Android)"
license = "MIT"

[features]
default = []
# Enable tracing/logging support
tracing = ["paykit-lib/tracing", "dep:tracing"]
# Enable bindgen CLI tool
bindgen-cli = ["dep:uniffi_bindgen", "dep:clap", "dep:anyhow", "dep:camino", "dep:toml"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "paykit_mobile"

[dependencies]
# Core Paykit crates
paykit-lib = { path = "../paykit-lib" }
paykit-interactive = { path = "../paykit-interactive" }
paykit-subscriptions = { path = "../paykit-subscriptions" }

# UniFFI for cross-platform bindings
# Using 0.29.4 to match bitkitcore's uniffi version for compatible RustBuffer types
uniffi = { version = "0.29.4", features = ["cli", "bindgen"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Cryptography for key management
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4.1"
rand = "0.8"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"

# File locking for atomic spending operations
fs2 = "0.4"

# UUID generation for reservation IDs
uuid = { version = "1.0", features = ["v4"] }

# Optional tracing support
tracing = { version = "0.1", optional = true }
camino = { version = "1.2.2", optional = true }
toml = { version = "0.8", optional = true }

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"
required-features = ["bindgen-cli"]

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
uuid = { version = "1.0", features = ["v4"] }
pkarr = "3"

[dependencies.uniffi_bindgen]
version = "0.29.4"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true
