[package]
name = "paykit-subscriptions"
version = "0.2.0"
edition = "2021"

[dependencies]
paykit-lib = { path = "../paykit-lib", features = ["pubky"] }
pubky = "0.6.0-rc.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1" # Still needed for metadata fields
serde_bytes = "0.11" # For efficient byte array serialization
# Deterministic serialization (pubky-sdk standard)
postcard = { version = "1.1.1", features = ["alloc"] }
# Safe financial arithmetic
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
curve25519-dalek = "4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
# Constant-time operations
subtle = "2.5"
rand = "0.8"

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Interactive payment execution (requires tokio I/O)
paykit-interactive = { path = "../paykit-interactive" }
# File-level locking for atomic operations (native only)
fs2 = "0.4"
uuid = { version = "1.7", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.7", features = ["v4", "js"] }
tokio = { version = "1", features = ["sync"] }
# Web APIs for WASM storage
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[dev-dependencies]
tempfile = "3"
pkarr = "3.10"
# Property-based testing
proptest = "1.4"
# Concurrency testing
tokio-test = "0.4"
# Benchmarking
criterion = "0.5"

[[bench]]
name = "signature_verification"
harness = false

